# card-centering-detector

./: .gitignore  TCG卡片居中度检测.spec  build.bat  build.sh  card_centering.spec  launcher.py  pyproject.toml  run.bat  run.sh
.github/workflows/: build.yml
src/card_centering/: __init__.py  __main__.py  adjuster.py  analyzer.py  border_detector.py  camera.py  detector.py  gui.py  main.py  platform_utils.py  visualizer.py
